# vpe-demos

./: README.rst
VPE-newbie/: demo-00-vpe-log.rst  demo-01-write-to-log.py  demo-02-custom-log.py
align/: README.rst  pyproject.toml
align/src/: vpe_align_demo.py
toys/: README.rst  hanoi.py  sokoban.py
utilities/: bufsel.py
