# Minimal pyproject for a VPE plugin.
[project]
name = 'vpe_align_demo'
version = '0.1'
description = 'Demo alignment plugin.'
authors = [
  { name='Paul Ollis', email='paul@cleversheep.org' },
]
requires-python = '>=3.11,<=3.14'
readme = 'README.rst'
dependencies = ['vpe>=0.7.2']

# This defines an entry point that will be found by VPE. When it is found
# VPE will import the module (vpe_align_demo) and (if present) call its
# init() function.
[project.entry-points.'vpe.plugins']
align = 'vpe_align_demo'

[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'
